--- a/v1.0.2.html
+++ b/v1.0.2.html
@@ -531,168 +531,183 @@
         </div>
         <div id="EditOverlay" class="overlay">
             <textarea id="Kinks">
-#Bodies
-(General)
-* Skinny
-* Chubby
-* Small breasts
-* Large breasts
-* Small cocks
-* Large cocks
+#Test
+(Általános)
+* Vékony
+* Telt
+* Kis mell
+* Nagy mell
+* Kis pénisz
+* Nagy pénisz
 
-#Clothing
-(Self, Partner)
-* Clothed sex
-* Lingerie
-* Stockings
-* Heels
-* Leather
+
+#Ruha
+(Önmagad, Partner)
+* Szex ruhában
+* Szexi fehérnemű
+* Harisnya
+* Magassarkú
+* Bőr
 * Latex
-* Uniform / costume
-* Cross-dressing
+* Egyenruha / jelmez
+* Másik nem ruhái
 
-#Groupings
-(General)
-* You and 1 male
-* You and 1 female
-* You and MtF trans
-* You and FtM trans
-* You and 1 male, 1 female
-* You and 2 males
-* You and 2 females
-* Orgy
 
-#General
-(Giving, Receiving)
-* Romance / Affection
-* Handjob / fingering
-* Blowjob
-* Deep throat
-* Swallowing
-* Facials
-* Cunnilingus
-* Face-sitting
-* Edging
-* Teasing
-* JOI, SI
+#Csoportok
+(Általános)
+* Te egy férfival
+* Te egy nővel
+* Te egy férfi->nő transzneművel
+* Te egy nő->férfi transzneművel
+* Te nővel és egy férfival
+* Te két férfival
+* Te két nővel
+* Orgia
 
-#Ass play
-(Giving, Receiving)
-* Anal toys
-* Anal sex, pegging
-* Rimming
-* Double penetration
-* Anal fisting
 
-#Restrictive
-(Self, Partner)
-* Gag
-* Collar
-* Leash
-* Chastity
-* Bondage (Light)
-* Bondage (Heavy)
-* Encasement
+#Általános
+(Adni, Kapni)
+* Romantika / szeretet
+* Kézi izgatás
+* Férfit szájjal izgatni
+* Mélytorok
+* Lenyelés
+* Arcra élvezés
+* Nőt szájjal izgatni
+* Arcra ülés
+* Csúcs közelében tartani
+* Épp csak izgatni
+* Utasításokat adni maszturbáláshoz
 
-#Toys
-(Self, Partner)
-* Dildos
-* Plugs
-* Vibrators
-* Sounding
 
-#Domination
-(Dominant, Submissive)
-* Dominant / Submissive
-* Domestic servitude
-* Slavery
-* Pet play
-* DD/lg, MD/lb
-* Discipline
-* Begging
-* Forced orgasm
-* Orgasm control
-* Orgasm denial
-* Power exchange
+#Fenék
+(Adni, Kapni)
+* Anális játékszerek
+* Anális szex
+* Szájjal izgatás
+* Dupla behatolás
+* Anális behatolás ököllel
 
-#No consent
-(Aggressor, Target)
-* Non-con / rape
-* Blackmail / coercion
-* Kidnapping
-* Drugs / alcohol
-* Sleep play
 
-#Taboo
-(General)
-* Incest
-* Ageplay
-* Interracial / Raceplay
-* Bestiality
-* Necrophilia
-* Cheating
-* Exhibitionism
-* Voyeurism
+#Korlátozó
+(Te, Partner)
+* Száj bekötése
+* Nyakörv
+* Póráz
+* Erényöv
+* Kikötözés (Könnyed)
+* Kikötözés (Durva)
+* Bedobozolás
 
-#Surrealism
-(Self, Partner)
-* Futanari
-* Furry
-* Vore
-* Transformation
-* Tentacles
-* Monster or Alien
 
-#Fluids
-(General)
-* Blood
-* Watersports
-* Scat
-* Lactation
-* Diapers
-* Cum play
+#Játékszerek
+(Te, Partner)
+* Műpénisz
+* Anális dugó
+* Vibrátor
+* Szonda
 
-#Degradation
-(Giving, Receiving)
-* Glory hole
-* Name calling
-* Humiliation
 
-#Touch & Stimulation
-(Actor, Subject)
-* Cock/Pussy worship
-* Ass worship
-* Foot play
-* Tickling
-* Sensation play
-* Electro stimulation
+#Alá/fölérendeltség
+(Domináns, Szubmisszív)
+* Domináns / Szubmisszív
+* Házi szolga
+* Rabszolga
+* Házikedvenc
+* Apuci kislánya, Anyuci kisfia
+* Rendreutasítás
+* Könyörgés
+* Kényszerített orgazmus
+* Orgazmuskontroll
+* Orgaznusmegtagadás
+* Hatalomcsere
 
-#Misc. Fetish
-(Giving, Receiving)
-* Fisting
-* Gangbang
-* Breath play
-* Impregnation
-* Pregnancy
-* Feminization
-* Cuckold / Cuckquean
 
-#Pain
-(Giving, Receiving)
-* Light pain
-* Heavy pain
-* Nipple clamps
-* Clothes pins
-* Caning
-* Flogging
-* Beating
-* Spanking
-* Cock/Pussy slapping
-* Cock/Pussy torture
-* Hot Wax
-* Scratching
-* Biting
-* Cutting                
+#Beleegyezés nélkül
+(Aggresszor, Alany)
+* Nem-beleegyezés / erőszak
+* Zsarolás / kényszerítés
+* Elrablás
+* Drog / alkohol
+* Alvás közben
+
+
+#Tabu
+(Általános)
+* Vérfertőzés
+* Játék a korral
+* Rasszok között
+* Betialitás
+* Nekrofília
+* Megcsalás
+* Exhibicionizmus
+* Voyeurizmus
+
+
+#Szürreális
+(Te, Partner)
+* Futanari (Lánynak néz ki, férfi genitáliákkal)
+* Furry (Állatnak beöltözve)
+* Vore (Élve megesznek)
+* Átváltozás
+* Polipkar
+* Szörny vagy földönkívüli
+
+
+#Nedvek
+(Általános)
+* Vér
+* Vízisportok
+* Ürülék
+* Anyatej
+* Pelenka
+* Játék az ondóval
+
+
+#Degradálás
+(Adni, Kapni)
+* Glory hole (Luk a falban)
+* Szidás
+* Megalázás
+
+
+#Érintés és izgatás
+(Cselekvő, Alany)
+* Pénisz/vaginaimádat
+* Fenékimádat
+* Játék a talppal
+* Csiklandozás
+* Játék az érzékekkel
+* Elektrostimuláció
+
+
+#Egyéb
+(Adni, Kapni)
+* Behatolás ököllel
+* Több férfival
+* Fojtogatós szex
+* Teherbe ejtés
+* Terhesség
+* Nemcsere (átöltözéssel)
+* Megcsalás közben nézni
+
+
+#Fájdalom
+(Adni, Kapni)
+* Enyhe fájdalom
+* Erős fájdalom
+* Mellbimbócsipesz
+* Ruhaszárító csipesz
+* Pálca
+* Paskoló
+* Verés
+* Elfenekelés
+* Genitáliapofon
+* Genitáliakínzás
+* Forró viasz
+* Karmolás
+* Harapás
+* Vágás
             </textarea>
             <button id="KinksOK">Accept</button>
         </div>
